# dashboard

./: Cargo.toml  README.md
.github/workflows/: check.yaml
dashboard/: Cargo.toml
dashboard/src/: globals.rs  lib.rs
dashboard/src/models/: memory_alocation.rs  memory_stats.rs  mod.rs  persistent_metrics_data.rs  realtime_metrics_data.rs  route_call.rs  route_stats.rs  system_snapshot.rs  tracking_allocator.rs
examples/: README.md
examples/basic_example/: Cargo.toml
examples/basic_example/src/: main.rs
ui/: index.html
