[workspace]
members = ["dashboard", "examples/basic_example"]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"

[workspace.dependencies]
axum = { version = "0.8.4", features = ["ws"] }
axum-server = "0.7.2"

tokio = { version = "1.36.0", features = ["full"] }

serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

syn = { version = "2.0", features = ["full", "extra-traits"] }
quote = "1.0"
proc-macro2 = "1.0"

sysinfo = "0.35.2"

ctrlc = "3.4.2"

dashboard = { path = "dashboard" }
